# make_trotec_ttp_smart

./: .gitignore  .gitmodules  README.md  activate_idf.sh
kicad/ttp5_mqtt/: Waveshare.kicad_sym  fp-lib-table  sym-lib-table  ttp5_mqtt.kicad_pcb  ttp5_mqtt.kicad_pro  ttp5_mqtt.kicad_sch
kicad/ttp5_mqtt/KiCADv6/: 2024-12-24_20-35-18.kicad_sym
kicad/ttp5_mqtt/KiCADv6/footprints.pretty/: TO-220_STM.kicad_mod
kicad/ttp5_mqtt/Waveshare.pretty/: SMD 6x6 button.kicad_mod  Waveshare ESP32-C6 Mini Development Board.kicad_mod
make_ttp_smart_esp32/make_ttp_smart/: CMakeLists.txt  sdkconfig  sdkconfig.old
make_ttp_smart_esp32/make_ttp_smart/data/: humidity_threshold.config  index.html  reset.html
make_ttp_smart_esp32/make_ttp_smart/main/: CMakeLists.txt  config.c  config.h  make_ttp_smart.c  shtc3.c  shtc3.h  webserver.c  webserver.h  wifi.c  wifi.h
